@@ -6,6 +6,7 @@ USER-VISIBLE CHANGES:
 - --nosound properly ignores the sound system.(emh, Cyclotron / Daryl for bug
   report)
 - Better appearance when no items will fit in the slot. (emh)
+- Knowledge screen is refreshed properly when loading a game. (emh)
 
 v0.30a (release 2010.02.06):
 
